--- a/pom.xml
+++ b/pom.xml
@@ -176,6 +176,23 @@
       </dependency>
       <dependency>
         <groupId>org.exoplatform.integration</groupId>
+        <artifactId>integ-search-portlet</artifactId>
+        <version>${project.version}</version>
+        <type>war</type>
+      </dependency>
+      <dependency>
+        <groupId>org.exoplatform.integration</groupId>
+        <artifactId>integ-search-portlet</artifactId>
+        <version>${project.version}</version>
+        <type>pom</type>
+      </dependency>
+      <dependency>
+        <groupId>org.exoplatform.integration</groupId>
+        <artifactId>integ-search-service</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.exoplatform.integration</groupId>
         <artifactId>integ-social-ecms</artifactId>
         <version>${project.version}</version>
       </dependency>
