--- a/integ-forum/integ-forum-social/pom.xml
+++ b/integ-forum/integ-forum-social/pom.xml
@@ -159,12 +159,14 @@
       <groupId>org.gatein.portal</groupId>
       <artifactId>exo.portal.component.identity</artifactId>
       <classifier>tests</classifier>
+      <version>${org.gatein.portal.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.gatein.portal</groupId>
       <artifactId>exo.portal.component.portal</artifactId>
       <classifier>tests</classifier>
+      <version>${org.gatein.portal.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
