--- a/integ-forum/integ-forum-social/pom.xml
+++ b/integ-forum/integ-forum-social/pom.xml
@@ -158,15 +158,13 @@
     <dependency>
       <groupId>org.gatein.portal</groupId>
       <artifactId>exo.portal.component.identity</artifactId>
-      <classifier>tests</classifier>
-      <version>${org.gatein.portal.version}</version>
+      <type>test-jar</type>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.gatein.portal</groupId>
       <artifactId>exo.portal.component.portal</artifactId>
-      <classifier>tests</classifier>
-      <version>${org.gatein.portal.version}</version>
+      <type>test-jar</type>
       <scope>test</scope>
     </dependency>
     <dependency>
