--- a/integ-calendar/pom.xml
+++ b/integ-calendar/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>integ</artifactId>
     <groupId>org.exoplatform.integration</groupId>
-    <version>4.0.0.Alpha1-SNAPSHOT</version>
+    <version>4.0.0-Alpha1</version>
   </parent>
   <artifactId>integ-calendar</artifactId>
   <packaging>pom</packaging>
