--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
     <artifactId>maven-parent-pom</artifactId>
     <groupId>org.exoplatform</groupId>
     <version>9-beta-1</version>
-    <relativePath></relativePath>
+    <relativePath />
   </parent>
   <groupId>org.exoplatform.integration</groupId>
   <artifactId>integ</artifactId>
-  <version>4.0.0.Alpha1-SNAPSHOT</version>
+  <version>4.0.0-Alpha1</version>
   <packaging>pom</packaging>
   <name>eXo Integration</name>
   <modules>
@@ -24,6 +24,7 @@
     <connection>scm:git:git://github.com/exoplatform/integration.git</connection>
     <developerConnection>scm:git:git@github.com:exoplatform/integration.git</developerConnection>
     <url>http://fisheye.exoplatform.org/browse/integration</url>
+    <tag>4.0.0-Alpha1</tag>
   </scm>
   <properties>
     <!-- **************************************** -->
