--- a/integ-calendar/integ-calendar-social/pom.xml
+++ b/integ-calendar/integ-calendar-social/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>integ-calendar</artifactId>
     <groupId>org.exoplatform.integration</groupId>
-    <version>4.0.0-Alpha1</version>
+    <version>4.0.0-Beta1-SNAPSHOT</version>
   </parent>
   <artifactId>integ-calendar-social</artifactId>
   <packaging>jar</packaging>
