--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <groupId>org.exoplatform.integration</groupId>
   <artifactId>integ</artifactId>
-  <version>4.0.0-Alpha1</version>
+  <version>4.0.0-Beta1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>eXo Integration</name>
   <modules>
@@ -24,7 +24,7 @@
     <connection>scm:git:git://github.com/exoplatform/integration.git</connection>
     <developerConnection>scm:git:git@github.com:exoplatform/integration.git</developerConnection>
     <url>http://fisheye.exoplatform.org/browse/integration</url>
-    <tag>4.0.0-Alpha1</tag>
+    <tag>HEAD</tag>
   </scm>
   <properties>
     <!-- **************************************** -->
