Adding Search Services artifact as a runtime dependency for the search portlets war artifact

--- a/integ-search-portlet/pom.xml
+++ b/integ-search-portlet/pom.xml
@@ -13,6 +13,11 @@
   <description>Integration search portlet</description>
   <dependencies>
     <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>integ-search-service</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
       <groupId>javax.portlet</groupId>
       <artifactId>portlet-api</artifactId>
       <scope>provided</scope>
