--- a/integ-search-portlet/pom.xml
+++ b/integ-search-portlet/pom.xml
@@ -26,34 +26,34 @@
       <groupId>org.juzu</groupId>
       <artifactId>juzu-bom-core</artifactId>
       <exclusions>
-        <exclusion>
-          <artifactId>weld-core</artifactId>
-          <groupId>org.jboss.weld</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>spring-core</artifactId>
-          <groupId>org.springframework</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>spring-beans</artifactId>
-          <groupId>org.springframework</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>spring-web</artifactId>
-          <groupId>org.springframework</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>slf4j-simple</artifactId>
-          <groupId>org.slf4j</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>slf4j-ext</artifactId>
-          <groupId>org.slf4j</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>commons-logging</artifactId>
-          <groupId>commons-logging</groupId>
-        </exclusion>
+	<exclusion>
+	  <artifactId>weld-core</artifactId>
+	  <groupId>org.jboss.weld</groupId>
+	</exclusion>
+	<exclusion>
+	  <artifactId>spring-core</artifactId>
+	  <groupId>org.springframework</groupId>
+	</exclusion>
+	<exclusion>
+	  <artifactId>spring-beans</artifactId>
+	  <groupId>org.springframework</groupId>
+	</exclusion>
+	<exclusion>
+	  <artifactId>spring-web</artifactId>
+	  <groupId>org.springframework</groupId>
+	</exclusion>
+	<exclusion>
+	  <artifactId>slf4j-simple</artifactId>
+	  <groupId>org.slf4j</groupId>
+	</exclusion>
+	<exclusion>
+	  <artifactId>slf4j-ext</artifactId>
+	  <groupId>org.slf4j</groupId>
+	</exclusion>
+	<exclusion>
+	  <artifactId>commons-logging</artifactId>
+	  <groupId>commons-logging</groupId>
+	</exclusion>
       </exclusions>
     </dependency>
     <dependency>
@@ -69,49 +69,71 @@
       <artifactId>juzu-plugins-portlet</artifactId>
     </dependency>
   </dependencies>
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.codehaus.gmaven</groupId>
-        <artifactId>gmaven-plugin</artifactId>
-        <configuration>
-          <sources>
-            <fileset>
-              <directory>${project.build.outputDirectory}</directory>
-              <includes>
-                <include>**/*.groovy</include>
-              </includes>
-            </fileset>
-          </sources>
-        </configuration>
-      </plugin>
-      <plugin>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <goals>
-              <goal>single</goal>
-            </goals>
-            <configuration>
-              <appendAssemblyId>false</appendAssemblyId>
-              <descriptorRefs>
-                <descriptorRef>platform-juzu</descriptorRef>
-              </descriptorRefs>
-            </configuration>
-          </execution>
-        </executions>
-        <dependencies>
-          <dependency>
-            <groupId>org.exoplatform.commons</groupId>
-            <artifactId>commons-juzu</artifactId>
-            <version>${org.exoplatform.commons.version}</version>
-          </dependency>
-        </dependencies>
-        <configuration>
-          <attach>true</attach>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+
+	<build>
+	<finalName>unified-search</finalName>
+		<plugins>
+				
+			<plugin>
+				<groupId>org.lesscss</groupId>
+				<artifactId>lesscss-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>administration</id>
+						<phase>process-resources</phase>
+						<goals>
+							<goal>compile</goal>
+						</goals>
+						<configuration>
+							<sourceDirectory>${basedir}/src/main/webapp/skin/less</sourceDirectory>
+							<outputDirectory>${basedir}/src/main/webapp/skin/css</outputDirectory>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.codehaus.gmaven</groupId>
+				<artifactId>gmaven-plugin</artifactId>
+				<configuration>
+					<sources>
+						<fileset>
+							<directory>${project.build.outputDirectory}</directory>
+							<includes>								
+								<include>**/*.groovy</include>
+							</includes>
+						</fileset>						
+					</sources>
+				
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+						<configuration>
+							<appendAssemblyId>false</appendAssemblyId>
+							<descriptorRefs>
+								<descriptorRef>platform-juzu</descriptorRef>
+							</descriptorRefs>
+						</configuration>
+					</execution>
+				</executions>
+				<dependencies>
+					<dependency>
+						<groupId>org.exoplatform.commons</groupId>
+						<artifactId>commons-juzu</artifactId>
+						<version>${org.exoplatform.commons.version}</version>
+					</dependency>
+				</dependencies>
+				<configuration>
+					<attach>true</attach>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
