Reorder depMgt - IMPORT TO KEEP Build cleanup

--- a/integ-search-portlet/pom.xml
+++ b/integ-search-portlet/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <artifactId>integ</artifactId>
@@ -14,47 +13,37 @@
   <description>Integration search portlet</description>
   <dependencies>
     <dependency>
-      <groupId>${project.groupId}</groupId>
-      <artifactId>integ-search-service</artifactId>
-      <scope>runtime</scope>
-    </dependency>
-    <dependency>
-      <groupId>javax.portlet</groupId>
-      <artifactId>portlet-api</artifactId>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
       <groupId>org.juzu</groupId>
       <artifactId>juzu-bom-core</artifactId>
       <exclusions>
-	<exclusion>
-	  <artifactId>weld-core</artifactId>
-	  <groupId>org.jboss.weld</groupId>
-	</exclusion>
-	<exclusion>
-	  <artifactId>spring-core</artifactId>
-	  <groupId>org.springframework</groupId>
-	</exclusion>
-	<exclusion>
-	  <artifactId>spring-beans</artifactId>
-	  <groupId>org.springframework</groupId>
-	</exclusion>
-	<exclusion>
-	  <artifactId>spring-web</artifactId>
-	  <groupId>org.springframework</groupId>
-	</exclusion>
-	<exclusion>
-	  <artifactId>slf4j-simple</artifactId>
-	  <groupId>org.slf4j</groupId>
-	</exclusion>
-	<exclusion>
-	  <artifactId>slf4j-ext</artifactId>
-	  <groupId>org.slf4j</groupId>
-	</exclusion>
-	<exclusion>
-	  <artifactId>commons-logging</artifactId>
-	  <groupId>commons-logging</groupId>
-	</exclusion>
+        <exclusion>
+          <artifactId>weld-core</artifactId>
+          <groupId>org.jboss.weld</groupId>
+        </exclusion>
+        <exclusion>
+          <artifactId>spring-core</artifactId>
+          <groupId>org.springframework</groupId>
+        </exclusion>
+        <exclusion>
+          <artifactId>spring-beans</artifactId>
+          <groupId>org.springframework</groupId>
+        </exclusion>
+        <exclusion>
+          <artifactId>spring-web</artifactId>
+          <groupId>org.springframework</groupId>
+        </exclusion>
+        <exclusion>
+          <artifactId>slf4j-simple</artifactId>
+          <groupId>org.slf4j</groupId>
+        </exclusion>
+        <exclusion>
+          <artifactId>slf4j-ext</artifactId>
+          <groupId>org.slf4j</groupId>
+        </exclusion>
+        <exclusion>
+          <artifactId>commons-logging</artifactId>
+          <groupId>commons-logging</groupId>
+        </exclusion>
       </exclusions>
     </dependency>
     <dependency>
@@ -69,8 +58,17 @@
       <groupId>org.juzu</groupId>
       <artifactId>juzu-plugins-portlet</artifactId>
     </dependency>
+    <dependency>
+      <groupId>javax.portlet</groupId>
+      <artifactId>portlet-api</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>integ-search-service</artifactId>
+      <scope>runtime</scope>
+    </dependency>
   </dependencies>
-  
   <build>
     <plugins>
       <plugin>
@@ -96,7 +94,6 @@
           </execution>
         </executions>
       </plugin>
-      
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
@@ -122,7 +119,6 @@
           </execution>
         </executions>
       </plugin>
-      
       <plugin>
         <groupId>org.lesscss</groupId>
         <artifactId>lesscss-maven-plugin</artifactId>
@@ -144,7 +140,6 @@
           </execution>
         </executions>
       </plugin>
-      
       <plugin>
         <groupId>org.codehaus.gmaven</groupId>
         <artifactId>gmaven-plugin</artifactId>
@@ -159,7 +154,6 @@
           </sources>
         </configuration>
       </plugin>
-      
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
         <executions>
@@ -187,7 +181,6 @@
           <attach>true</attach>
         </configuration>
       </plugin>
-   
     </plugins>
   </build>
 </project>
