--- a/integ-ecms/integ-ecms-social/pom.xml
+++ b/integ-ecms/integ-ecms-social/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>integ-ecms</artifactId>
     <groupId>org.exoplatform.integration</groupId>
-    <version>4.0.0-SNAPSHOT</version>
+    <version>4.0.0-Beta2</version>
   </parent>
   <artifactId>integ-ecms-social</artifactId>
   <packaging>jar</packaging>
