INTEG-151: Unified-Search = improve internationalization on all search portlets, add alert message

--- a/integ-search-portlet/src/main/resources/unifiedsearch/unifiedsearch.properties
+++ b/integ-search-portlet/src/main/resources/unifiedsearch/unifiedsearch.properties
@@ -10,7 +10,7 @@ unifiedsearch.index.showmore.label=Show More Results
 unifiedsearch.edit.label=Search Settings
 unifiedsearch.edit.resultsPerPage.label=Results per page:
 unifiedsearch.edit.searchIn.label=Search in:
-unifiedsearch.edit.everything.label=Everything
+unifiedsearch.edit.everything.label=All
 unifiedsearch.edit.currentsite.label=Search in current site only:
 unifiedsearch.edit.hideSearchForm.label=Hide search form:
 unifiedsearch.edit.hideFacetsFilter.label=Hide facets filter:
