--- a/pom.xml
+++ b/pom.xml
@@ -49,14 +49,14 @@
     <org.gatein.shindig.version>2.0.2.Final-gatein-4</org.gatein.shindig.version>
     <org.gatein.portal.version>3.5.3.Final</org.gatein.portal.version>
     <!-- Platform Project Dependencies -->
-    <org.exoplatform.commons.version>4.0.0-SNAPSHOT</org.exoplatform.commons.version>
-    <org.exoplatform.ecms.version>4.0.0-SNAPSHOT</org.exoplatform.ecms.version>
-    <org.exoplatform.social.version>4.0.0-SNAPSHOT</org.exoplatform.social.version>
-    <org.exoplatform.forum.version>4.0.0-SNAPSHOT</org.exoplatform.forum.version>
-    <org.exoplatform.wiki.version>4.0.0-SNAPSHOT</org.exoplatform.wiki.version>
-    <org.exoplatform.calendar.version>4.0.0-SNAPSHOT</org.exoplatform.calendar.version>
+    <org.exoplatform.commons.version>4.0.0-RC2</org.exoplatform.commons.version>
+    <org.exoplatform.ecms.version>4.0.0-RC2</org.exoplatform.ecms.version>
+    <org.exoplatform.social.version>4.0.0-RC2</org.exoplatform.social.version>
+    <org.exoplatform.forum.version>4.0.0-RC2</org.exoplatform.forum.version>
+    <org.exoplatform.wiki.version>4.0.0-RC2</org.exoplatform.wiki.version>
+    <org.exoplatform.calendar.version>4.0.0-RC2</org.exoplatform.calendar.version>
     <!-- Platform Project 3rd party Dependencies -->
-    <org.exoplatform.doc.doc-style.version>4.0.0-SNAPSHOT</org.exoplatform.doc.doc-style.version>
+    <org.exoplatform.doc.doc-style.version>4.0.0-RC2</org.exoplatform.doc.doc-style.version>
   </properties>
   <dependencyManagement>
     <!-- ### NEVER CHANGE THIS ORDER OF DEPMGT ### -->
