--- a/pom.xml
+++ b/pom.xml
@@ -20,17 +20,17 @@
     <!-- ********************* -->
     <!-- Dependencies versions -->
     <!-- ********************* -->
-    <org.exoplatform.portal.version>3.2.8-PLF</org.exoplatform.portal.version>
-    <org.exoplatform.cs.version>2.2.13</org.exoplatform.cs.version>
-    <org.exoplatform.ks.version>2.2.13</org.exoplatform.ks.version>
-    <org.exoplatform.ecms.version>2.3.11</org.exoplatform.ecms.version>
-    <org.exoplatform.social.version>1.2.13</org.exoplatform.social.version>
-    <org.exoplatform.commons.version>1.1.12</org.exoplatform.commons.version>
+    <org.exoplatform.portal.version>3.2.9-PLF-SNAPSHOT</org.exoplatform.portal.version>
+    <org.exoplatform.cs.version>2.2.14-SNAPSHOT</org.exoplatform.cs.version>
+    <org.exoplatform.ks.version>2.2.14-SNAPSHOT</org.exoplatform.ks.version>
+    <org.exoplatform.ecms.version>2.3.12-SNAPSHOT</org.exoplatform.ecms.version>
+    <org.exoplatform.social.version>1.2.14-SNAPSHOT</org.exoplatform.social.version>
+    <org.exoplatform.commons.version>1.1.13-SNAPSHOT</org.exoplatform.commons.version>
     <org.gatein.shindig.version>2.0.2</org.gatein.shindig.version>    
-    <org.exoplatform.kernel.version>2.3.11-GA</org.exoplatform.kernel.version>
-    <org.exoplatform.jcr.version>1.14.11-GA</org.exoplatform.jcr.version>
+    <org.exoplatform.kernel.version>2.3.12-GA-SNAPSHOT</org.exoplatform.kernel.version>
+    <org.exoplatform.jcr.version>1.14.12-GA-SNAPSHOT</org.exoplatform.jcr.version>
     <org.slf4j.version>1.5.8</org.slf4j.version>
-    <org.exoplatform.core.version>2.4.11-GA</org.exoplatform.core.version>
+    <org.exoplatform.core.version>2.4.12-GA-SNAPSHOT</org.exoplatform.core.version>
     <org.shindig.version>2.0.2</org.shindig.version>
     <org.json.version>20070829</org.json.version>
     <javax.jcr.version>1.0</javax.jcr.version>
