--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <groupId>org.exoplatform.integration</groupId>
   <artifactId>integ</artifactId>
-  <version>4.1.0-SNAPSHOT</version>
+  <version>4.1.x-integ-social-notifications-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>eXo Integration</name>
   <modules>
@@ -51,10 +51,10 @@
     <!-- Platform Project Dependencies -->
     <org.exoplatform.commons.version>4.1.0-SNAPSHOT</org.exoplatform.commons.version>
     <org.exoplatform.ecms.version>4.1.0-SNAPSHOT</org.exoplatform.ecms.version>
-    <org.exoplatform.social.version>4.1.0-SNAPSHOT</org.exoplatform.social.version>
-    <org.exoplatform.forum.version>4.1.0-SNAPSHOT</org.exoplatform.forum.version>
-    <org.exoplatform.wiki.version>4.1.0-SNAPSHOT</org.exoplatform.wiki.version>
-    <org.exoplatform.calendar.version>4.1.0-SNAPSHOT</org.exoplatform.calendar.version>
+    <org.exoplatform.social.version>4.1.x-social-notifications-SNAPSHOT</org.exoplatform.social.version>
+    <org.exoplatform.forum.version>4.1.x-forum-social-notifications-SNAPSHOT</org.exoplatform.forum.version>
+    <org.exoplatform.wiki.version>4.1.x-wiki-social-notifications-SNAPSHOT</org.exoplatform.wiki.version>
+    <org.exoplatform.calendar.version>4.1.x-cal-social-notifications-SNAPSHOT</org.exoplatform.calendar.version>
     <!-- Platform Project 3rd party Dependencies -->
     <org.exoplatform.doc.doc-style.version>4.1.0-SNAPSHOT</org.exoplatform.doc.doc-style.version>
   </properties>
