--- a/pom.xml
+++ b/pom.xml
@@ -49,8 +49,8 @@
     <org.gatein.shindig.version>2.0.2.Final-gatein-4</org.gatein.shindig.version>
     <org.gatein.portal.version>3.5.4.Final</org.gatein.portal.version>
     <!-- Platform Project Dependencies -->
-    <org.exoplatform.commons.version>4.1.0-SNAPSHOT</org.exoplatform.commons.version>
-    <org.exoplatform.ecms.version>4.1.0-SNAPSHOT</org.exoplatform.ecms.version>
+    <org.exoplatform.commons.version>4.1.x-social-notifications-SNAPSHOT</org.exoplatform.commons.version>
+    <org.exoplatform.ecms.version>4.1.x-social-notifications-SNAPSHOT</org.exoplatform.ecms.version>
     <org.exoplatform.social.version>4.1.x-social-notifications-SNAPSHOT</org.exoplatform.social.version>
     <org.exoplatform.forum.version>4.1.x-forum-social-notifications-SNAPSHOT</org.exoplatform.forum.version>
     <org.exoplatform.wiki.version>4.1.x-wiki-social-notifications-SNAPSHOT</org.exoplatform.wiki.version>
