--- a/pom.xml
+++ b/pom.xml
@@ -42,21 +42,21 @@
     <!-- **************************************** -->
     <org.exoplatform.depmgt.version>7</org.exoplatform.depmgt.version>
     <!-- JCR Project Dependencies -->
-    <org.exoplatform.kernel.version>2.4.4-GA</org.exoplatform.kernel.version>
-    <org.exoplatform.core.version>2.5.4-GA</org.exoplatform.core.version>
-    <org.exoplatform.jcr.version>1.15.4-GA</org.exoplatform.jcr.version>
+    <org.exoplatform.kernel.version>2.4.5-GA-SNAPSHOT</org.exoplatform.kernel.version>
+    <org.exoplatform.core.version>2.5.5-GA-SNAPSHOT</org.exoplatform.core.version>
+    <org.exoplatform.jcr.version>1.15.5-GA-SNAPSHOT</org.exoplatform.jcr.version>
     <!-- GateIn Project Dependencies -->
     <org.gatein.shindig.version>2.0.2.Final-gatein-4</org.gatein.shindig.version>
     <org.gatein.portal.version>3.5.5.Final</org.gatein.portal.version>
     <!-- Platform Project Dependencies -->
-    <org.exoplatform.commons.version>4.0.1</org.exoplatform.commons.version>
-    <org.exoplatform.ecms.version>4.0.1</org.exoplatform.ecms.version>
-    <org.exoplatform.social.version>4.0.1</org.exoplatform.social.version>
-    <org.exoplatform.forum.version>4.0.1</org.exoplatform.forum.version>
-    <org.exoplatform.wiki.version>4.0.1</org.exoplatform.wiki.version>
-    <org.exoplatform.calendar.version>4.0.1</org.exoplatform.calendar.version>
-    <!-- Platform Project 3rd party Dependencies -->
-    <org.exoplatform.doc.doc-style.version>4.0.1</org.exoplatform.doc.doc-style.version>
+    <org.exoplatform.commons.version>4.0.x-SNAPSHOT</org.exoplatform.commons.version>
+    <org.exoplatform.ecms.version>4.0.x-SNAPSHOT</org.exoplatform.ecms.version>
+    <org.exoplatform.social.version>4.0.x-SNAPSHOT</org.exoplatform.social.version>
+    <org.exoplatform.forum.version>4.0.x-SNAPSHOT</org.exoplatform.forum.version>
+    <org.exoplatform.wiki.version>4.0.x-SNAPSHOT</org.exoplatform.wiki.version>
+    <org.exoplatform.calendar.version>4.0.x-SNAPSHOT</org.exoplatform.calendar.version>
+    <!-- Platform Project 3rd party Dependencies-->
+    <org.exoplatform.doc.doc-style.version>4.0.x-SNAPSHOT</org.exoplatform.doc.doc-style.version>
   </properties>
   <dependencyManagement>
     <!-- ### NEVER CHANGE THIS ORDER OF DEPMGT ### -->
