INTEG-218 : [Stabilization FB] build failure

--- a/integ-search-service/pom.xml
+++ b/integ-search-service/pom.xml
@@ -13,6 +13,7 @@
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
+      <scope>compile</scope>
     </dependency>
      <dependency>
         <groupId>org.exoplatform.calendar</groupId>
